# ai-platform-template

./: .dockerignore  .env.example  .env.langfuse.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.langfuse.yaml  docker-compose.local.yaml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.agents/fastapi-template-repo/: SKILL.md
.agents/fastapi-template-repo/agents/: openai.yaml
.agents/fastapi-template-repo/references/: architecture.md
.agents/senior-ai-engineer/: SKILL.md
.agents/senior-ai-engineer/agents/: openai.yaml
.agents/senior-ai-engineer/references/: ai-engineering.md
.claude/skills/langfuse/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_platform_foundation.py  0002_create_tasks.py  0003_create_outbox_events.py  0004_create_quota_tables.py
app/adapters/: __init__.py
app/adapters/agents/: __init__.py  langgraph.py  simple.py
app/adapters/embeddings/: __init__.py  fake.py  openai_compatible.py
app/adapters/jobs/: __init__.py  in_process.py
app/adapters/langchain/: __init__.py  bridges.py  chat_models.py  embeddings.py
app/adapters/langgraph/: __init__.py  default_graph.py
app/adapters/llm/: cached.py  fake.py  openai_compatible.py
app/adapters/llm_cache/: __init__.py  noop.py
app/adapters/mlops/: __init__.py  local_tracker.py  mlflow.py
app/adapters/observability/: __init__.py  debug.py  otel_debug.py
app/adapters/storage/: __init__.py  local.py
app/adapters/vector_store/: __init__.py  in_memory.py
app/api/: router.py
app/bootstrap/: addons.py  application.py  manifest.py  middleware.py  resources.py  state.py  worker.py
app/contracts/: __init__.py  agents.py  embeddings.py  experiment_tracker.py  jobs.py  llm.py  llm_cache.py  observability.py  storage.py  vector_store.py
app/core/: README.md  config.py  context.py  database.py  errors.py  health.py  idempotency.py  logging.py  middleware.py  mongo.py  pagination.py  redaction.py  redis.py  registry.py  request_context.py  resilience.py  schema.py  security.py  worker.py
app/core/config/: __init__.py  ai.py  http.py  infra.py  messaging.py  mongo.py  platform.py  runtime.py
app/core/database/: __init__.py  engine.py  model.py
app/modules/agents/: __init__.py  runtime.py  schemas.py
app/modules/audit/: __init__.py  models.py  service.py
app/modules/cache/: factory.py  gateway.py
app/modules/evals/: evaluators.py  rag.py  runner.py  schemas.py
app/modules/feedback/: __init__.py  models.py  repository.py  schemas.py
app/modules/idempotency/: __init__.py  adapters.py  factory.py  models.py  service.py  store.py
app/modules/identity/: auth.py  models.py  repository.py  schemas.py
common/: enums.py
ops/mlops/: mlflow.local.env.example
ops/observability/: README.md
research/: README.md  __init__.py
research/artifacts/: __init__.py  sample_prompt_manifest.yaml  schemas.py
research/evaluation/: __init__.py  run_rag_smoke.py
research/training/: train_template.py
scripts/: check_env_example.py  check_template_hygiene.sh  export.sh  run_eval.py  run_worker.py
scripts/smoke/: langfuse_callback.py  langfuse_prompt.py
tests/: conftest.py  factories.py
tests/integration/: test_acompletions.py  test_ai_capabilities.py  test_auth.py  test_completion_patterns.py  test_completions.py  test_docs.py  test_eval_smoke_command.py  test_feedback.py  test_full_feature_service_smoke.py  test_gzip.py  test_health.py  test_http_middleware.py  test_ip_rate_limit.py  test_request_timeout.py  test_template_lego.py
tests/unit/: test_alembic_migrations.py  test_container_hardening.py  test_langsmith_absence.py  test_makefile_ci.py  test_run_eval_entry.py  test_run_worker_entry.py  test_template_hygiene.py
(+229 files in other folders)
