[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI template project"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Bui Dang Phuc", email = "buidangphuc2801@gmail.com" }]
dependencies = [
  "aiofiles>=24.1.0,<25.0.0",
  "alembic>=1.18.0,<2.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "cachetools>=5.5.2,<6.0.0",
  "fastapi>=0.115.12,<0.116.0",
  "fastapi-pagination>=0.12.34,<0.13.0",
  "greenlet>=3.1.1,<4.0.0",
  "httptools>=0.6.4,<0.7.0",
  "langchain>=1.0,<2.0",
  "langfuse>=4.0,<5.0",
  "langgraph>=1.0,<2.0",
  "llama-index-core>=0.14,<0.15",
  "loguru>=0.7.3,<0.8.0",
  "msgspec>=0.19.0,<0.20.0",
  "numpy>=2.0,<3.0",
  "openai>=1.69.0,<2.0.0",
  "orjson>=3.10.0,<4.0.0",
  "pydantic>=2.11.1,<3.0.0",
  "pydantic-extra-types>=2.10.3,<3.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "redis>=5.2.1,<6.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "uvicorn>=0.34.0,<0.35.0",
  "uvloop>=0.21.0,<0.22.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
aws = ["aioboto3>=13.0.0,<14.0.0"]
rabbitmq = ["aio-pika>=9.4.0,<10.0.0"]

[dependency-groups]
dev = [
  "aiosqlite>=0.20.0,<0.21.0",
  "detect-secrets>=1.5.0,<2.0.0",
  "fakeredis>=2.26.0,<3.0.0",
  "httpx>=0.28.1,<0.29.0",
  "pre-commit>=4.3.0,<5.0.0",
  "pyright>=1.1.390,<2.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.25.3,<0.26.0",
  "pytest-xdist>=3.6.1,<4.0.0",
  "pyyaml>=6.0.3,<7.0.0",
  "ruff>=0.11.2,<0.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
  ".venv",
  "alembic/versions",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501",  # line length (formatter handles)
  "B008",  # FastAPI Depends() default
  "SIM117", # nested with statements (common in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B017", "B018"]
"alembic/env.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
